# event-manager-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
event_manager/app/: settings.py  urls.py  views.py
event_manager/event/: filters.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
event_manager/event/migrations/: 0001_initial.py  0002_event_type.py
event_manager/event/tests/: base_test_case.py  test_create.py  test_delete.py  test_get.py  test_list.py  test_partial_update.py  test_register.py  test_unregister.py  test_update.py
event_manager/user/: serializers.py  urls.py  views.py
event_manager/user/tests/: test_me.py  test_register.py  test_tokens.py
